_sass/menu/_navbar.scss
.navbar-brand {
  background: url("/assets/images/mobile-tablet-logo.png") no-repeat;
  background-size: contain;
  background-position: 7px 19px;
  width: 150px;
  @media (min-width: $screen-md-min) {
    background: url("/assets/images/desktop-logo.png") no-repeat;
    background-size: contain;
    background-position: 0px 17px;
  }

}

.navbar-header{
    .donate-button{
        padding: 11px 28px;
        margin-top: 28px;
        margin-left: 31px;
    }
}

.navbar{
    ul{
        margin-top:10px;
    }
}

@media (max-width:767px) { 
	button.navbar-toggle {
	    float: left !important;
	    margin-left: 15px;
        margin-top: 32px;
        margin-right: 0px !important;
	}
	
	.navbar-header{
        .donate-button{
            padding: 11px 15px;
	        margin-left: 14px;
            margin-right: 15px;
            float: right;
        }
    }
}

@media (min-width:1024px) {
    .navbar-header{
        .donate-button{
            padding: 11px 40px;
    	    margin-left: 25px;
        }
    }
}

@media (min-width:1440px) {
    .navbar-header{
        .donate-button{
    	    margin-left: 25px;
        }
    }
}

